# bilibili-video-notes-tool

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.sh
src/bilivideo_notes/: __init__.py  cli.py
tests/: test_cli.py
